# Scientific-Computing-emat30008

./: .gitignore  README.md  mypy.ini  pyproject.toml  report.ipynb
.github/workflows/: lint.yml  mypy.yml  test.yml
examples/: error_plot.py  hopf_continuation.py  hopf_normal_limit_cycle.py  predator_pray_limit_cycle.py  solver_comparison.py  week_15.py  week_16.py  week_17.py  week_18.py  week_19.py  week_20.py  week_21.py
report/: compile_report.ipynb  ref.bib  report.ipynb  template.tplx
src/scicomp/: __init__.py  bvps.py  continuation.py  finite_diff.py  integrate.py  odes.py  pdes.py  shooting.py
test/: test_bvps.py  test_continuation.py  test_finite_diff.py  test_integrate.py  test_odes.py  test_pdes.py  test_shooting.py
