[project]
name = "scicomp"
description = "emat30008"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Jake Bowhay", email = "up19056@bristol.ac.uk" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"